# EBSIM

./: Cargo.toml  README.md
assets/: Marqueur d_identification.stp  Panneau Solaire.stp  Support Panneau Solaire.stp  plante.stp  pot.stp  robot.glb  start_tag.stp  support_balise.stp  table.gltf  table_2024.glb  table_2024.stp
src/: main.rs
