[package]
name = "ebsim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_flycam = "*"


[workspace]
resolver = "2"


[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
